--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -15,6 +15,10 @@
     font-style: normal;
 }
 /* end of Font Squirrel */
+.hiddenText { font-family: bd_cartoon_shoutregular; visibility: hidden;
+}
+
+
 
 body {
     margin: 0;
